# prysma

./: .clangd  .gitattributees  .gitignore  CLA.md  CMakeLists.txt  CONTRIBUTING.FR.md  CONTRIBUTING.md  Contributing.fr.md  LICENSE  Makefile  README.FR.md  README.fr.md  README.md  build.py  debug.py  diagramme.dot  myclass.cpp  myclass.h  output.ll  readme.fr.md  tout_le_projet.txt
.github/ISSUE_TEMPLATE/: bogue.md  bug.md  fonctionnalité.md  functionnalité.md
.github/workflows/: ci.yml
Docs/EN/: PRYSMA.md  ROBUSTNESS.md
Docs/FR/: LANGUAGE_SPECIFICATION.md  ROBUSTNESS_SECURITY.md
Documents/: Installation.md  LLVMDebug.md  Prysma.md
Documents/AnalyseFonctionnelle/: .~lock.Raphael Arseneault Analyse fonctionnelle et organique.docx#  AnalyseFonctionnelle.md  AnalyseOrganique.md  Raphael Arseneault Analyse fonctionnelle et organique.docx
Documents/Fr/: Prysma.md
Documents/LLVMDoc/: CMakeLists.txt  LLVMMethodeDoc.cpp  Makefile
Documents/LLVMDoc/DecompilationC/: Tableau.ll
Src/Lib/: Malloc.cpp  Print.cpp
Tests/: CMakeLists.txt  main.py
Tests/Orchestration/: build_manager.py  test_cpp_unittest.py  test_projet_prysma.py
Tests/PrysmaCodeTests/: TestBoucle.p  (+8 more)
generation/: engine_generation.py  generateur_ast.py  generateur_graphe_viz.py  generateur_interface_visiteur.py  generateur_parseur.py  generateur_visiteur.py  generateur_visiteur_base_generale.py  generateur_visiteur_cpp.py  generator_ast.py  generator_class_test.py  generator_expression.py  generator_graphe_viz.py  generator_interface_visitor.py  generator_parser.py  generator_visitor_base_general.py  generator_visitor_destruction.py  moteur_generation.py
src/: main.cpp
tests/: CMakeLists.txt  run_tests.py
(+665 files in other folders)
